# embedded-departure-board

./: .clang-format  .clangd  .envrc  .gitignore  README.md  example.json  log-2022-12-12T14:10:40.118444374-05:00.txt  log-2022-12-12T14:22:37.538968632-05:00.txt  log-2022-12-12T14:49:04.705196502-05:00.txt  log-2022-12-12T15:31:34.279987712-05:00.txt  log-2022-12-12T15:48:41.781403253-05:00.txt
.west/: config
app/: .clang-format  CMakeLists.txt  Kconfig  VERSION  app.conf  debug.conf  mcuboot.conf  pm_static.yml  prj.conf  prj_release.conf  sign.conf  sysbuild.conf  sysbuild_release.conf  west.yml
app/boards/: circuitdojo_feather_nrf9160-pinctrl.dtsi  circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160_ns_release.conf  pinnacle_100_dvk.conf  pinnacle_100_dvk.overlay
app/cert/: gdig2.crt.pem
app/child_image/: mcuboot.conf
app/child_image/mcuboot/: pinnacle_100_dvk.conf
app/child_image/mcuboot/boards/: circuitdojo_feather_nrf9160.conf  circuitdojo_feather_nrf9160.overlay  pinnacle_100_dvk.overlay
app/dts/bindings/: display-switch.yml  ws2812_rtio.yml
app/keys/public/: bustracker-pvta-com-r11.pem  github-com.pem  jes-contact.pem
app/src/: app_rtc.c  app_rtc.h  bit_bang.c.temp  bit_bang.h  connection_manager.c  connection_manager.h  custom_http_client.c  custom_http_client.h  custom_http_client_experimental.c  display_switches.c  display_switches.h  external_rtc.c  external_rtc.h  fota.c  fota.h  gpiote_test.c  gpiote_test.h  http_client.c  http_client.h  http_client.old.c  https_client.c  https_client.h  i2c_display_index.h  jsmn_parse.c  jsmn_parse.h  led_display.c  led_display.h  light_sensor.c  light_sensor.h  lte_manager.c  lte_manager.h  main.c  modem_net_connect.c  modem_net_connect.h  parse_json.c  parse_json.h  parse_zjson.c  parse_zjson.h  protected_storage.c  protected_storage.h  (+20 more)
app/src/display/: display_switches.c  led_display.c  pwm_leds.c
app/src/json/: jsmn.c  jsmn_parse.c  jsmn_parse.h  json_helpers.c  json_helpers.h  parse_bustracker.c  parse_bustracker.h  parse_swiftly.c  parse_swiftly.h
app/src/mcuboot/: circuitdojo_feather_nrf9160_ns.overlay
app/src/net/: connection_manager.c  connection_manager.h  custom_http_client.c  custom_http_client.h  fota.c  fota.h  lte_manager.c  lte_manager.h  ntp.c  ntp.h
app/sysbuild/mcuboot/: prj.conf  prj_release.conf
app/sysbuild/mcuboot/boards/: circuitdojo_feather_nrf9160.conf  (+1 more)
(+6 files in other folders)
